# mednafen-rr

./: AUTHORS  Aku.cce142f692c1444aca902f3473afac35.10.mcm  Aku.cce142f692c1444aca902f3473afac35.nc0  BIOShelp.md  ChangeLog  Commandline.md  ConfigControllerHotkeys.md  FAQ.md  MC2.md  MCM.md  Makefile  Makefile.in  MakingAVideo.md  MakingTAS.md  Mednafen.vcproj  MednafenFront.md  ProjectHome.md  aku backup.txt  bonk.0e997fd6e47e9212a90b0a137d65283d.10.mcm  bonk.0e997fd6e47e9212a90b0a137d65283d.nc0  bullshit.txt  config.status  configure.ac  libtool  ninja backup.txt  opentest.txt  smembuffertest.txt  smemmovie.txt  stoprecordingsmemmovie.txt
Debug/: BuildLog.htm
autom4te.cache/: traces.0
include/: config.h  config.h.in  getopt.h
include/libcdio-0.81/: aclocal.m4  configure.ac
include/libcdio-0.81/test/: Makefile.in
include/misc/: oull.c  stdint.h  unistd.h
include/misc/cdio/: types.h
include/misc/sndfile/: Makefile.in  alaw.c  caf.c  command.c  common.c  common.h  double64.c  dump2.txt  dump4.txt  file_io.c  flac.c  g72x_main.c  ima_adpcm.c  interleave.c  macbinary3.c  macos.c  mat4.c  ms_adpcm.c  ogg.c  paf.c  raw.c  rx2.c  sds.c  sfendian.h  sndfile.c  strings.c  svx.c  test_endswap.c  txw.c  voc.c  vox_adpcm.c  wav.c  wav_w64.c  wve.c
intl/: Makefile
mcm-mc2/: mcm-mc2.sln
mcm-mc2/src/: mcm-mc2.cpp  stdafx.cpp
mednafen-mmmencode/: ChangeLog  Makefile.am  configure.ac  libtool
mednafen-mmmencode/include/: config.h  config.h.in
mednafen-mmmencode/m4/: ChangeLog
mednafen-mmmencode/src/: main.cpp  selblur.cpp
mednafen-mmmencode/src/compress/: mmcommon.h  mmmreader.cpp  resize.cpp  video.h
po/: Makefile  de.gmo  ru.po
src/: Blip_Buffer.cpp  Makefile.am  Makefile.in  Stereo_Buffer.cpp  debug.cpp  driver.h  file.cpp  general.cpp  general.h  mednafen-driver.h  mednafen.cpp  mednafen.h  memory.cpp  mempatcher.cpp  movie (plays from a file properly).cpp  movie working buffer.cpp  movie.cpp  movie.h  netplay.cpp  netplay.h  player.cpp  settings.cpp  state.cpp  state.h  types.h  wave.cpp
src/.deps/: Blip_Buffer.Po  Stereo_Buffer.Po  dis6280.Po  error.Po  general.Po  mednafen.Po  movie.Po  player.Po  psf.Po  settings.Po  state.Po
src/cdrom/: cdromfile.cpp  cdromif.cpp  scsicd.cpp
src/compress/.deps/: minilzo.Po  quicklz.Po
src/drivers/: args.h  cheat.cpp  debugger.cpp  fps.cpp  fps.h  gfxdebugger.cpp  input-default-buttons.h  input.cpp  joystick.cpp  logdebugger.cpp  main.cpp  main.h  memdebugger.cpp  netplay.h  opengl.h  scale2x.c  shader.cpp  sound.cpp  sound.h  video.cpp
src/drivers/.deps/: config.Po  console.Po  debugger.Po  fps.Po  gfxdebugger.Po  hq2x.Po  input-config.Po  logdebugger.Po  netplay.Po  nnx.Po  nongl.Po  prompt.Po  remote.Po  scale3x.Po  sound.Po  video-state.Po  video.Po
src/gba/: GBAinline.h
src/lynx/: cart.cpp  lynx-cart.cpp  lynx-rom.cpp  memmap.cpp  susie.cpp
src/lynx/.deps/: system.Po
src/mpcdec/: Makefile
src/mpcdec/.deps/: huffsv46.Po  huffsv7.Po  idtag.Po  mpc_reader.Po  streaminfo.Po
src/nes/: Makefile  fds.cpp  input.cpp  nes.cpp  nsf.cpp  unif.cpp  x6502.cpp
src/nes/boards/: 193.cpp  n106.cpp
src/nes/ppu/: ppu.cpp
src/nes/sound/: filter.h  sound.cpp
src/ngp/: Makefile  Z80_interface.h  dma.cpp  flash.cpp  gfx_scanline_colour.cpp  mem.cpp  neopop.h  ngp_gfx.cpp  ngp_gfx.h  ngp_sound.cpp  rom.cpp
src/ngp/.deps/: Z80_interface.Po  bios.Po  biosHLE.Po  flash.Po  gfx.Po  gfx_scanline_colour.Po  gfx_scanline_mono.Po  mem.Po  neopop.Po  rom.Po  rtc.Po
src/ngp/TLCS-900h/: TLCS900h_interpret_dst.cpp  TLCS900h_interpret_single.cpp  TLCS900h_interpret_src.cpp
src/pce/: Makefile  cdrom.cpp  debug.cpp  huc.cpp  huc.h  huc6280.cpp  input.cpp  pce.cpp  pce.h  psg.cpp  vdc.cpp
src/pce/.deps/: cdrom.Po  debug.Po  hes.Po  huc.Po  input.Po  pce.Po
src/pcfx/: Makefile  input.cpp  king.cpp  pcfx.cpp  v810_cpu.cpp  vdc.cpp
src/pcfx/.deps/: debug.Po  interrupt.Po  jrevdct.Po  king.Po  timer.Po  v810_cpuD.Po
src/sexyal/: convert.c  sexyal.c  sexyal.h
src/sexyal/drivers/: alsa.c  jack.c  oss.c  oss.h
src/sms/: Makefile  cart.cpp  romdb.h  sound.h
src/string/: world_strtod.c
src/string/.deps/: escape.Po  world_strtod.Po
src/tremor/: Makefile  Makefile.in
src/tremor/.deps/: floor0.Po  floor1.Po  (+4 more)
src/video/: font-data-18x18.c  text.cpp
src/wswan/: Makefile  main.cpp  tcache.cpp  v30mz.cpp  wswan_main.cpp  wswan_memory.cpp
src/z80-fuse/: z80.h
trunk/: INSTALL  Makefile  Mednafen.sln  TODO  acinclude.m4  aclocal.m4  autogen.sh  bonk.0e997fd6e47e9212a90b0a137d65283d.0.mcm  config.status  configure  ninja.adecf9e9d9be8a300818ad2cc09d49fe.nc0  notes.txt  smembuffertest.txt  stoprecordingsmemmovie.txt  stoprecordingsmemmovie1.txt  tempbuffertest.txt  tempmovie.txt
trunk/Debug/: vc90.idb
trunk/Documentation/: debugger.html  mednafen.html
trunk/autom4te.cache/: output.0
trunk/include/: config.h.xbox  getopt.cpp
trunk/mednafen-mmmencode/: Makefile  Makefile.in  aclocal.m4  autogen.sh  config.status  configure
trunk/mednafen-mmmencode/src/: Makefile.am  Makefile.in  endian.cpp  endian.h  main.h  mmmreader.h  selblur.h
trunk/mednafen-mmmencode/src/compress/: types.h  video.cpp
trunk/po/: ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  de.po  es.gmo  es.po  mednafen.pot  ru.gmo
trunk/src/: Makefile  debug.cpp  dis6280.cpp  file.cpp  mednafen.cpp  mednafen.h  mempatcher-driver.h  mempatcher.cpp  movie-driver.h  movie.cpp  movie.h  netplay.cpp  player.cpp  psf.cpp  settings.cpp  settings.h  state-driver.h  state.cpp  state.h  types.h  types.h.s  video.h
trunk/vc9/: Mednafen.vcproj
trunk/win32/: Resource.h  aviout.cpp  inttypes.h  mednafen_2008.sln  mednafen_2008.vcproj  ramsearch.cpp  ramwatch.cpp  resource.rc  winmain.cpp
vc9/: Mednafen.sln
wiki/: BIOShelp.wiki  Commandline.wiki  ConfigControllerHotkeys.wiki  FAQ.wiki  MC2.wiki  MCM.wiki  MakingAVideo.wiki  MakingTAS.wiki  MednafenFront.wiki
win32/: Med-MakeRelease.bat  Resource.h  aviout.cpp  aviout.h  inttypes.h  mednafen_2008.sln  mednafen_2008.vcproj  ramsearch.cpp  ramwatch.cpp  resource.rc  unixstuff.h  winmain.cpp
(+307 files in other folders)
